--- a/build.gradle
+++ b/build.gradle
@@ -31,11 +31,11 @@ plugins {
     id "com.github.johnrengelman.shadow" version "7.0.0"
 }
 
-group 'nl.codevs.raiders'
-version '0.0.1'
+group 'nl.codevs.decree'
+version '1.0.0'
 def apiVersion = '1.17'
 def name = getRootProject().getName() // See settings.gradle
-def main = 'nl.codevs.raiders.Raiders'
+def main = 'nl.codevs.decree.Decree'
 // You need to also set command usage, aliases and description in src/main/resources/plugin.yml
 
 // ADD YOURSELF AS A NEW LINE IF YOU WANT YOUR OWN BUILD TASK GENERATED
