--- a/build.gradle
+++ b/build.gradle
@@ -133,6 +133,7 @@ configurations.all {
  * Dynamically loaded dependencies are defined in the plugin.yml (updating these must be updated in the
  * plugin.yml also, otherwise they wont be available). These do not increase binary size). Only declare
  * these dependencies if they are available on mvn central.
+ * these dependencies if they are available on mvn central.
  */
 dependencies {
     // Provided or Classpath
@@ -145,5 +146,5 @@ dependencies {
     implementation 'io.papermc:paperlib:1.0.5'
     implementation "net.kyori:adventure-text-minimessage:4.1.0-SNAPSHOT"
     implementation "net.kyori:adventure-platform-bukkit:4.0.0-SNAPSHOT"
-    implementation 'net.kyori:adventure-api:4.8.1'
+    implementation 'net.kyori:adventure-api:4.9.0'
 }
